--- a/css/common.css
+++ b/css/common.css
@@ -3,8 +3,8 @@ html {
 	font:normal 12px '微软雅黑','Microsoft YaHei';
 }
 body,ul,ol,p,h1,h2,h3 {
-	margin: 0;
-	padding: 0;
+	/* margin: 0;
+	padding: 0; */
 }
 ul,ol {
 	list-style: none;
